# MemoBase

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  setup.sh  signup  zdy.bundle
.claude/: settings.local.json
.github/workflows/: ci.yml
.trellis/: .template-hashes.json
agent-service/: Dockerfile  config.py  main.py  pyproject.toml
agent-service/agent/: graph.py  llm.py  nodes.py  prompts.py  state.py  tools.py
agent-service/mcp/: client.py
agent-service/proto/: agent.proto  agent_pb2.py  agent_pb2_grpc.py
agent-service/retriever/: hybrid.py
agent-service/server/: grpc_server.py  text_processor_server.py
agent-service/tests/: __init__.py  conftest.py  test_agent_graph.py  test_agent_nodes.py  test_graph.py  test_nodes.py  test_retriever.py  test_state.py
agent-service/text_processor/: __init__.py  chunker.py  stopwords.py  tokenizer.py
agent-service/text_processor/data/: hit_stopwords.txt
agent-service/tracing/: collector.py
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  go.mod  go.sum
backend/migrations/: 001_init.sql  003_memory_enhancement.sql  004_embedding_model.sql
doc/: deployment-guide.md  后端模块交互架构文档.md  接口文档（MVP）.md  模块核心技术栈与任务边界.md  模块组织与系统架构说明.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: chat.spec.ts  (+6 more)
gan-harness/: eval-rubric.md  generator-state.md  spec.md
monitoring/: README.md  prometheus.yml
scripts/: backup.sh  restore.sh
(+125 files in other folders)
