[project]
name = "agent-service"
version = "0.1.0"
description = "MemoBase AI agent service powered by LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.0",
    "protobuf>=6.33.6",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
